--- a/valuefilter/.cs50.yaml
+++ b/valuefilter/.cs50.yaml
@@ -2,7 +2,7 @@ submit50:
   files: &submit50_files
     - !exclude "*"
     - !include "*.py"
-    - !require "valuefilter".py"
+    - !require "valuefilter.py"
   style: false
 
 check50:
